--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_API_KEY=AIzaSyBA_ZmkjFXbfgPikku2Buoaqy9cm-pmqO0 react-scripts start",
+    "build": "REACT_APP_API_KEY=AIzaSyBA_ZmkjFXbfgPikku2Buoaqy9cm-pmqO0 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +27,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://maps.googleapis.com"
 }
