--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "REACT_APP_API_KEY=AIzaSyBA_ZmkjFXbfgPikku2Buoaqy9cm-pmqO0 react-scripts start",
-    "build": "REACT_APP_API_KEY=AIzaSyBA_ZmkjFXbfgPikku2Buoaqy9cm-pmqO0 react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
